--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "dev": "browser-sync start --proxy localhost:8081 --files 'src/**/*.{ts,tsx,js,jsx,css}' --no-notify --reload-delay 1000"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/metro-runtime": "~3.2.3",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
