--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "expo": "~51.0.28",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~12.0.10",
@@ -25,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-web": "~0.19.10"
@@ -33,6 +35,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
+    "@types/react-native-dotenv": "^0.2.2",
     "nodemon": "^3.1.7",
     "typescript": "^5.1.3"
   },
