--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.74.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-maps": "^1.18.2",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-web": "~0.19.10"
   },
